css/style.css
/* ... */
.contacts-info.is-open {
  display: block;
}
.contacts-info-a {
  font-style: normal;
  font-weight: 400;
  color: var(--lightest-dark-blue);
  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}
.contacts-info-a:hover,
.contacts-info-a:focus {
  color: var(--dark-light-blue);
}
.contacts-info li {
  list-style-type: none;
  flex-shrink: 0;
}
.list-contacts-item {
  font-size: 20px;
  letter-spacing: 0.04em;
  line-height: 1.2;
  font-weight: 500;
}
.list-contacts-item:nth-child(odd) {
  margin-bottom: 25px;
}
.overlay-social-icons {
  display: flex;
  position: relative;
  top: 536px;
  left: 16px;
  gap: 40px;
  justify-content: start;
  z-index: 1000;
  transition: right 250ms cubic-bezier(0.4, 0, 0.2, 1);
  overflow: hidden;
}

/* first section*/
.banner {
  display: flex;
  justify-items: center;
  padding: 72px 0;
  text-align: center;
  background-color: var(--dark-blue);
  background-image:
    linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
    url('../images/banner-mobile-1x.jpg');
  width: 100%;
  min-height: 432px;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
}
.hero-text {
  font-size: 36px;
  font-weight: 700;
  line-height: 1.11;
  color: white;
  max-width: 216px;
  max-height: 160px;
  height: auto;
  letter-spacing: 0.02em;
  margin-bottom: 72px;
  justify-self: center;
}
.btn-hero-img {
  display: block;
  min-width: 169px;
  height: 56px;
  margin: 0 auto;
  color: white;
  background-color: var(--blue);
  font-weight: 500;
  line-height: 1.5;
  letter-spacing: 0.04em;
  border: none;
  border-radius: 4px;
  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
  cursor: pointer;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}
.btn-hero-img:hover,
.btn-hero-img:focus {
  background-color: var(--dark-light-blue);
  cursor: pointer;
}

/* second section*/
.second-section-list {
  display: flex;
  flex-direction: column;
  gap: 72px;
}
.element-li {
  height: calc((100% - 72px) / 4);
  display: flex;
  flex-direction: column;
  text-align: center;
}
.icons-what-we-do {
  display: none;
}
.title-second {
  font-size: 36px;
  line-height: 1.1;
  text-align: center;
  letter-spacing: 0.02em;
  text-transform: capitalize;
  color: var(--dark-blue);
  margin-bottom: 72px;
}
.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}
.title-third {
  font-weight: 700;
  font-size: 36px;
  line-height: 1.11;
  letter-spacing: 0.02em;
  color: var(--dark-blue);
  margin-bottom: 8px;
  text-align: center;
}

.wt-we-do-paragraph {
  font-weight: 500;
  color: var(--lightest-dark-blue);
  text-align: start;
}

/* third section*/
.title-section-third {
  font-weight: 700;
  font-size: 36px;
  line-height: 1.1;
  text-align: center;
  margin-bottom: 72px;
}
.title-third-our-team {
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
  text-align: start;
}
.text-center {
  display: flex;
  flex-direction: column;
  padding: 32px 0;
  gap: 8px;
}
.text-center .title-third-our-team,
.text-center .wt-we-do-paragraph {
  text-align: center;
}
.team-member-img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}
.social-icons {
  display: flex;
  gap: 24px;
  justify-content: center;
}
.social-icons-item {
  width: 40px;
  height: 40px;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}
.social-icons-link {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  background-color: var(--blue);
  border-radius: 50%;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}
.social-icons-link:hover,
.social-icons-link:focus {
  background-color: var(--dark-light-blue);
}
.fill-svg {
  fill: var(--lightest-blue);
}
.color-bg-our-team {
  background-color: var(--lightest-blue);
}
.team-grid {
  display: flex;
  flex-direction: column;
  gap: 72px;
  margin: 0 12px;
  overflow: hidden;
}
.fix-line-height {
  line-height: 1.11;
}
.li-team-member {
  background-color: var(--white);
  border-radius: 0 0 4px 4px;
  box-shadow:
    0 2px 1px 0 var(--grey-ligtest),
    0 1px 1px 0 var(--grey-ligtest),
    0 1px 6px 0 var(--grey-ligtest);
  justify-items: center;
  align-items: center;
}
.team-member-image {
  padding: 32px 0;
}

/* fourth section */
.portfolio-grid {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 48px;
  justify-content: center;
}
.portfolio-li {
  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
}
.portfolio-li:hover {
  box-shadow:
    0 2px 1px 0 var(--grey-ligtest),
    0 1px 1px 0 var(--grey-ligtest),
    0 1px 6px 0 var(--grey-ligtest);
}
.portfolio-li:hover .paragraph-img {
  transform: translateY(0%);
}
.portfolio-grid img {
  width: 100%;
  height: auto;
}
.portfolio-text {
  padding: 32px 16px;
  border: 1px solid var(--light-violette);
  border-top: none;
}
.portfolio-text h3,
.portfolio-text p {
  text-align: start;
}
.portfolio-grid-img {
  position: relative;
  overflow: hidden;
}
.paragraph-img {
  position: absolute;
  top: 0;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: var(--lightest-blue);
  padding: 40px 32px;
  background-color: var(--blue);
  height: 100%;
  width: 100%;
  transform: translateY(100%);
  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

/* footer */
.footer {
  background-color: var(--dark-blue);
  padding: 96px 0;
  height: 664px;
}
.text-footer {
  text-align: center;
}
.bottom-logo {
  display: inline-block;
  margin-bottom: 16px;
  margin-right: auto;
}
.span-second {
  color: var(--lightest-blue);
}
.footer-paragraph {
  width: 288px;
  height: 72px;
  display: flex;
  color: var(--white);
  text-align: start;
  font-weight: 400;
  justify-content: center;
}
.font-weight-500 {
  font-weight: 500;
}
/* ... */

